# auto-walrus

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  auto_walrus.py  pyproject.toml  setup.cfg  t.py  tox.ini
.github/workflows/: publish_to_pypi.yml  tox.yml
tests/: main_test.py
utils/: bump_version.py
